feat: integrate UserMapper in UserApiController and add Postman tests